#377, #126: migrating CustomersOverview
