# backend/src/test/resources/api-spec.yaml
@@ -1106,6 +1106,33 @@ paths:
         schema:
           type: integer
           format: int64
+      - name: sortBy
+        in: query
+        required: false
+        schema:
+          type: string
+          enum:
+          - _NOT_SUPPORTED
+      - name: pageNumber
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+      - name: pageSize
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+      - name: sortOrder
+        in: query
+        required: false
+        schema:
+          type: string
+          enum:
+          - asc
+          - desc
       responses:
         "400":
           description: Bad Request
